[package]
name = "stroke-width-transform-rs"
version = "0.1.0"
edition = "2018"

[[example]]
name = "swt"
crate-type = ["bin"]

[dependencies]
image = "0.23.14"
num-traits = "0.2.14"
imageproc = "0.22.0"

[dev-dependencies]
clap = "3.0.0-beta.2"
show-image = { version = "0.8.4", features = [ "image" ] }
