[package]
name = "stroke-width-transform"
version = "0.1.0"
edition = "2021"
authors = ["Markus Mayer"]
description = "An implementation of the Stroke Width Transform for OCR image preprocessing."
keywords = ["image-processing", "swt", "ocr"]
categories = ["multimedia::images", "text-processing"]
homepage = "https://github.com/sunsided/stroke-width-transform-rs"
repository = "https://github.com/sunsided/stroke-width-transform-rs"
license = "MIT"

[[example]]
name = "swt"
crate-type = ["bin"]

[dependencies]
image = "0.25.1"
num-traits = "0.2.19"
imageproc = "0.24.0"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
show-image = { version = "0.14.0", features = ["image"] }
